--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@tsparticles/react": "^3.0.0",
+    "framer-motion": "^11.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "react-scroll": "^1.9.0",
-    "react-toastify": "^10.0.5"
+    "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^10.0.5",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.5.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
